<resources>
  <string name="app_name">Ippo Notes</string>
  <string name="loremIpsum_oneParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eu ante bibendum, vulputate ipsum nec, sollicitudin purus. Nullam maximus enim massa, quis auctor odio tempus quis. Sed aliquet purus vitae quam posuere eleifend. Fusce a maximus odio, ac dignissim ante.</string>
  <string name="note_title">Note\'s Title</string>
  <string name="icon">N</string>
  <string name="new_note">New Note</string>
  <string name="save">Save</string>
  <string name="cancel">Cancel</string>
  <string name="title_hint">Title</string>
  <string name="note_hint">Note</string>
  <string name="note_floating_label">Note</string>
  <string name="title_error_empty">Title is empty.</string>
  <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="edit_note">Edit Note</string>
  <string name="search">Search</string>
  <string name="selected_items">Selected Items: %d</string>
  <string name="snackbar_dialog">%d item(s) deleted</string>
  <string name="undo">undo</string>
</resources>
