<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/parent"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="?selectableItemBackground"
  android:paddingTop="@dimen/padding"
  android:paddingStart="@dimen/padding"
  android:paddingEnd="@dimen/padding">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/container">

    <android.support.v7.widget.AppCompatTextView
      android:id="@+id/icon"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:layout_centerVertical="true"
      android:layout_marginEnd="@dimen/margin"
      android:background="@drawable/background_note_icon_unmarked"
      android:gravity="center"
      android:text="@string/icon"
      android:textColor="@color/whiteText"
      android:textSize="40sp" />

    <android.support.v7.widget.AppCompatTextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margin4dp"
      android:layout_toEndOf="@id/icon"
      android:lines="1"
      android:maxLines="1"
      android:singleLine="true"
      android:text="@string/note_title"
      android:textSize="@dimen/pageTitle" />

    <android.support.v7.widget.AppCompatTextView
      android:id="@+id/note"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/title"
      android:layout_toEndOf="@id/icon"
      android:ellipsize="end"
      android:maxLines="3"
      android:text="@string/loremIpsum_oneParagraph"
      android:textSize="@dimen/normalText" />

  </RelativeLayout>



  <View
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:background="@color/blackTextDividers"
    android:layout_below="@id/container"
    android:layout_marginTop="@dimen/margin"/>

</RelativeLayout>